--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,24 @@
-django==4.2
-web3==5.25.0
-requests==2.28.1
+blinker==1.9.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.0
+dnspython==2.7.0
+Flask==3.1.0
+Flask-Cors==5.0.0
+idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+packaging==24.2
+pluggy==1.5.0
+pycparser==2.22
+pymongo==4.10.1
+pytest==8.3.4
+python-dotenv==1.0.1
+requests==2.32.3
+urllib3==2.3.0
+Werkzeug==3.1.3
