--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.11",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
