updated to handle jwt authentication

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,3 +1,7 @@
 MONGO_URI=mongodb://root:example@localhost:27017/
-SECRET_KEY=7ffdd70141fa4bd17ef320fa9dc363aa
+SECRET_KEY=KscIH1xeYhfLZd09S6KxztW0s_K5ghx4BTEUq7vaBUY=
 FLASK_DEBUG=1
+MONGO_DB_NAME=test_db
+JWT_SECRET_KEY=5KZS0gpybdxhU97k_fpN45jjGww3tZ9pb3ggV-g8F6o=
+JWT_TOKEN_LOCATION=["headers"]
+JWT_ACCESS_TOKEN_EXPIRES=3600
