--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,5 +1,8 @@
 DB_USERNAME=
 DB_PASSWORD=
 MONGO_URI=mongodb+srv://${DB_USERNAME}:${DB_PASSWORD}@medcrypta-backend-dev.57mxz.mongodb.net/?retryWrites=true&w=majority&appName=medcrypta-backend-dev
-SECRET_KEY=52e88381f1e49200075981c576b4a67b
+SECRET_KEY="4qFf6UcA3oWF1ApKHxj3gys5rNeTpWWwoPUjgJDpbwI="
 FLASK_DEBUG=0
+JWT_SECRET_KEY=AFSMTFjAMVcUHaB9j8UsJr-cdm68ZojTmU5YdZ_ZyBY=
+JWT_TOKEN_LOCATION=["headers"]
+JWT_ACCESS_TOKEN_EXPIRES=3600
