--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ cryptography==44.0.0
 dnspython==2.7.0
 Flask==3.1.0
 Flask-Cors==5.0.0
+Flask-JWT-Extended==4.7.1
 idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
@@ -16,9 +17,11 @@ MarkupSafe==3.0.2
 packaging==24.2
 pluggy==1.5.0
 pycparser==2.22
+PyJWT==2.10.1
 pymongo==4.10.1
 pytest==8.3.4
 python-dotenv==1.0.1
+python-json-logger==3.2.1
 requests==2.32.3
 urllib3==2.3.0
 Werkzeug==3.1.3
