--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,7 +1,8 @@
-DB_USERNAME=
-DB_PASSWORD=
-MONGO_URI=mongodb+srv://${DB_USERNAME}:${DB_PASSWORD}@medcrypta-backend-dev.57mxz.mongodb.net/?retryWrites=true&w=majority&appName=medcrypta-backend-dev
-SECRET_KEY="4qFf6UcA3oWF1ApKHxj3gys5rNeTpWWwoPUjgJDpbwI="
+DB_USERNAME=medcrypta
+DB_PASSWORD=medcrypta
+MONGO_DB_NAME=medcrypta_db
+SECRET_KEY=KscIH1xeYhfLZd09S6KxztW0s_K5ghx4BTEUq7vaBUY=
+MONGO_URI=mongodb+srv://medcrypta:medcrypta@cluster0.tsapq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 FLASK_DEBUG=0
 JWT_SECRET_KEY=AFSMTFjAMVcUHaB9j8UsJr-cdm68ZojTmU5YdZ_ZyBY=
 JWT_TOKEN_LOCATION=["headers"]
