--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,14 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@sentry/nextjs": "^8.47.0",
+    "bcryptjs": "^3.0.1",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.11",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
+    "mongoose": "^8.10.1",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
